2006-07-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/conversion.R (as.directed, as.undirected) :
	added
	* interfaces/R/src/rinterface.c (R_igraph_to_directed)
	(R_igraph_to_undirected) : added

2006-07-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (write.graph) : added pajek format
	(write.graph.pajek) : added
	* interfaces/R/src/rinterface.c (R_igraph_write_graph_pajek) : added

	* interfaces/R/src/rinterface.c 
	(R_igraph_attribute_get_numeric_vertex_attr)
	(R_igraph_attribute_get_numeric_edge_attr) : convert to NUMERIC

2006-07-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (page.rank) : added
	* interfaces/R/src/rinterface.c (R_igraph_pagerank) : added

	* interfaces/R/igraph/R/structural.properties.R (reciprocity) : added
	* interfaces/R/src/rinterface.c (R_igraph_reciprocity) : added	

	* interfaces/R/igraph/R/layout.R (layout.reingold.tilford) : added
	* interfaces/R/igraph/R/tkplot.R : added Reingold-Tilford layout to menu
	* interfaces/R/src/rinterface.c (R_igraph_layout_reingold_tilford) : 
	added

	* interfaces/R/igraph/R/structural.properties.R (rewire) : added
	* interfaces/R/src/rinterface.c (R_igraph_rewire) : added
	
2006-07-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c : updated, 'attr' attribute removed.

2006-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c : updated to new delete_edges 
	interface

	* interfaces/R/igraph/R/interface.R (delete.edges) : edge sequence 
	argument

	* interfaces/R/igraph/R/iterators.R (P, path) : added
	* interfaces/R/src/rinterface.c (R_igraph_es_path, R_igraph_es_pairs) :
	added
	
2006-07-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (edge.betweenness) :
	range check for 'e' argument

2006-07-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/attributes.R (get.vertex.attribute)