@@ -1,3 +1,7 @@
+2006-08-02  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/iterators.R ([.igraph.es) : adj function added
+
 2006-07-25  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/conversion.R (as.directed, as.undirected) :
